# open-agentic-platform

./: .env.example  .gitattributes  .gitignore  .prettierignore  .prettierrc  .sops.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPERS.md  FAQ.md  Makefile  README.md  RELEASE-VERIFICATION.md  SECURITY.md  deny.toml  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml
crates/: Cargo.toml
crates/agent/: Cargo.toml
crates/agent-frontmatter/: Cargo.toml
crates/agent-frontmatter/src/: lib.rs  lint.rs  parser.rs  types.rs
crates/agent-frontmatter/tests/: ts_bindings.rs
crates/agent/src/: agent.rs  canonical.rs  complexity.rs  dispatch.rs  executor.rs  id.rs  lib.rs  plan.rs  registry.rs  safety.rs  schemas.rs  validator.rs
crates/agent/tests/: golden_tests.rs
crates/artifact-extract/: Cargo.toml
crates/artifact-extract/src/: cache.rs  dispatch.rs  header.rs  lib.rs
crates/artifact-extract/tests/: no_llm_deps.rs
crates/axiomregent/: Cargo.toml
crates/axiomregent/src/: agent_tools.rs  events.rs  feature_tools.rs  internal_client.rs  lease.rs  lib.rs  main.rs  platform_config.rs  registry_bridge.rs  run_tools.rs  skill_provider.rs
crates/axiomregent/tests/: agent_integration.rs  governed_dispatch_latency.rs  mcp_contract.rs  mcp_featuregraph_test.rs  mcp_router_contract_test.rs  mcp_tools_test.rs  no_stdout_pollution.rs  persistence.rs  policy_preflight_test.rs  run_streaming_test.rs  snapshot_determinism.rs  snapshot_pagination.rs  snapshot_workspace_integration.rs  stale_lease_test.rs  stdio_integrity.rs  test_helpers.rs  tool_tier_coverage.rs  verify_test.rs  workspace_discovery_test.rs
crates/blockoli/: Cargo.toml  build.rs
crates/blockoli/src/: blocks.rs  lib.rs  main.rs  routes.rs
crates/canonical-json/: Cargo.toml
crates/canonical-json/src/: lib.rs
crates/elucid-contracts/: Cargo.toml
crates/elucid-contracts/src/: adapter_manifest.rs  adapter_registry.rs  agent_loader.rs  build_spec.rs  lib.rs  pipeline_state.rs  validation.rs  verification.rs
crates/elucid-engine/: Cargo.toml
crates/elucid-engine/src/: agent_bridge.rs  engine.rs  lib.rs  manifest_gen.rs  pipeline_state.rs  policy_shard.rs  topo_sort.rs  verify_harness.rs
crates/factory-contracts/: Cargo.toml
crates/factory-contracts/schemas/: build-spec.schema.yaml
crates/factory-contracts/src/: adapter_manifest.rs  adapter_registry.rs  agent_loader.rs  agent_reference.rs  budget.rs  build_spec.rs  knowledge.rs  lib.rs  namespace.rs  pattern_resolver.rs  pipeline_state.rs  provenance.rs  provenance_config.rs  stakeholder_docs.rs  validation.rs  verification.rs
crates/factory-engine/: Cargo.toml
crates/factory-engine/src/: agent_bridge.rs  agent_resolver.rs  artifact_store.rs  checks.rs  engine.rs  factory_root.rs  gate.rs  governance_certificate.rs  harness_state.rs  lib.rs  manifest_gen.rs  pipeline_state.rs  policy_shard.rs  preflight.rs  project_config.rs  stagecraft_client.rs  standards_resolver.rs  substrate_version.rs  topo_sort.rs  verify_harness.rs  virtual_root.rs
crates/factory-engine/tests/: agent_resolver_test.rs  integration_078_e2e.rs  run_replay.rs  spec-122-coverage.md  spec_122_e2e.rs  virtual_root.rs  virtual_root_offline.rs
crates/factory-platform-client/: Cargo.toml
crates/factory-platform-client/src/: cache_root.rs  client.rs  error.rs  lib.rs  materialise.rs  wire.rs
crates/factory-platform-client/tests/: platform_client.rs
crates/factory-project-detect/: Cargo.toml
crates/factory-project-detect/src/: legacy.rs  lib.rs
crates/featuregraph/: Cargo.toml
crates/featuregraph/src/: enrichment.rs  graph.rs  index_bridge.rs  lib.rs  locate.rs  preflight.rs  registry_source.rs  scanner.rs  tools.rs
crates/featuregraph/tests/: golden.rs
crates/gitctx/: .gitignore  Cargo.toml  LICENSE  README.md
crates/gitctx/src/: cache.rs  context.rs  lib.rs  mcp_main.rs  xml_format.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: agent_identity.rs  artifact.rs  circuit_breaker.rs  claude_executor.rs  cli_gate.rs  effort.rs  gates.rs  hiqlite_store.rs  http.rs  lib.rs  manifest.rs  output_filter.rs  promotion.rs  provider_executor.rs  sqlite_state.rs  sse.rs  state.rs  store.rs  store_config.rs  verify.rs
crates/orchestrator/tests/: integration_052.rs  store_conformance.rs
crates/policy-kernel/: Cargo.toml
crates/policy-kernel/benches/: kernel_eval.rs
crates/policy-kernel/src/: audit.rs  coherence.rs  denial.rs  lib.rs  merge.rs  permission.rs  proof_chain.rs  provenance_policy.rs  settings.rs  watcher.rs
crates/provenance-validator/: Cargo.toml
crates/provenance-validator/src/: allowlist.rs  citation.rs  corpus.rs  lib.rs  manifest.rs  validator.rs
crates/provenance-validator/tests/: no_llm_deps.rs  sc001_cfs_audit.rs  spec-121-coverage.md  validator_tests.rs
crates/provider-registry/: Cargo.toml
crates/provider-registry/src/: error.rs  governed.rs  lib.rs  registry.rs  types.rs
crates/run/: Cargo.toml
crates/run/src/: config.rs  lib.rs  registry.rs  runner.rs  state.rs
crates/skill-factory/: Cargo.toml
crates/skill-factory/src/: factory.rs  filter.rs  lib.rs  parser.rs  plugin.rs  tool_def.rs  types.rs
crates/stackwalk/: build.rs
crates/stackwalk/src/: indexer.rs  parser.rs
crates/standards-loader/: Cargo.toml
crates/standards-loader/src/: formatter.rs  lib.rs  loader.rs  resolver.rs  types.rs
crates/titor/: .gitignore  Cargo.toml  LICENSE  README.md
crates/titor/benches/: titor_bench.rs
crates/titor/examples/: README.md  TITOR_MCP_README.md  titor_cli.rs  titor_mcp_server.rs
crates/titor/src/: checkpoint.rs  collections.rs  compression.rs  diff.rs  error.rs  file_tracking.rs  lib.rs  merkle.rs  storage.rs  tests.rs  timeline.rs  titor.rs  (+3 more)
crates/tool-registry/: Cargo.toml
crates/xray/: Cargo.toml  build.rs
tools/assumption-cascade-check/: Cargo.toml
tools/ci-parity-check/: Cargo.toml
tools/codebase-indexer/: Cargo.toml
tools/oap-code-index-enrich/: Cargo.toml
tools/oap-registry-enrich/: Cargo.toml
tools/policy-compiler/: Cargo.toml
(+2234 files in other folders)
