[workspace]
resolver = "2"
members = [
    # 18 OAP library crates.
    "crates/agent",
    "crates/agent-frontmatter",
    "crates/artifact-extract",
    "crates/axiomregent",
    "crates/factory-contracts",
    "crates/factory-engine",
    "crates/factory-platform-client",
    "crates/factory-project-detect",
    "crates/featuregraph",
    "crates/orchestrator",
    "crates/policy-kernel",
    "crates/provenance-validator",
    "crates/provider-registry",
    "crates/run",
    "crates/skill-factory",
    "crates/standards-loader",
    "crates/tool-registry",
    "crates/xray",

    # 5 spec-spine tools.
    "tools/spec-spine/codebase-indexer",
    "tools/spec-spine/registry-consumer",
    "tools/spec-spine/spec-code-coupling-check",
    "tools/spec-spine/spec-compiler",
    "tools/spec-spine/spec-lint",

    # 7 OAP-specific Rust tools (schema-parity-check is JS-only).
    "tools/oap/adapter-scopes-compiler",
    "tools/oap/assumption-cascade-check",
    "tools/oap/ci-parity-check",
    "tools/oap/oap-code-index-enrich",
    "tools/oap/oap-registry-enrich",
    "tools/oap/policy-compiler",
    "tools/oap/stakeholder-doc-lint",

    # Shared spec types crate.
    "tools/shared/spec-types",
]

# apps/desktop/src-tauri/ is a deliberately separate single-member workspace
# (its own [workspace] table) to prevent libsqlite3-sys linking conflicts
# when both this crate and crates/axiomregent bundle rusqlite. Operator
# decision #1 (Epic 2): keep isolated.
#
# platform/services/deployd-api-rs/ is excluded from this root workspace per
# operator decision #2 (Epic 2): platform/ remains structurally untouched
# (master plan §Locked target layout). It builds standalone via
# `cargo build --manifest-path platform/services/deployd-api-rs/Cargo.toml`.
exclude = [
    "product/apps/desktop/src-tauri",
    "platform/services/deployd-api-rs",
]
