[workspace]
members = [
    "agent",
    "agent-frontmatter",
    "artifact-extract",
    "axiomregent",
    "factory-contracts",
    "factory-engine",
    "factory-project-detect",
    "featuregraph",
    "orchestrator",
    "policy-kernel",
    "provider-registry",
    "run",
    "skill-factory",
    "standards-loader",
    "tool-registry",
    "xray",
]
resolver = "2"
