# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Bartek Kus

[package]
name = "agent-frontmatter"
version = "0.1.0"
edition = "2024"
description = "Unified agent and skill frontmatter schema — spec 054"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Rust → TypeScript type mirror for stagecraft's agent catalog (spec 111 §2.1).
# The derive has no runtime cost; bindings are written by a cargo test.
ts-rs = { version = "12", features = ["serde-json-impl"] }

[package.metadata.oap]
spec = "054-agent-frontmatter-schema"
