# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Bartek Kus

[package]
name = "artifact-extract"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Extract business artifacts (DOCX, XLSX, PPTX, PDF, JSON, PBIX, ZIP) to plain-text .txt files with a cache-aware mirror layout. Rust port of the extract_artifacts.py used by goa-software-factory pipelines."

[lib]
name = "artifact_extract"
path = "src/lib.rs"

[[bin]]
name = "artifact-extract"
path = "src/bin/artifact_extract.rs"

[dependencies]
anyhow = "1"
thiserror = "2"
chrono = "0.4"
serde_json = { version = "1", features = ["preserve_order"] }
walkdir = "2"
clap = { version = "4", features = ["derive"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
calamine = "0.26"
pdf-extract = "0.7"
tempfile = "3"

[dev-dependencies]
tempfile = "3"

[package.metadata.oap]
spec = "087-unified-architecture-domain-model"
