# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Bartek Kus

[package]
name = "artifact-extract"
publish = false   # internal workspace crate; binaries ship via release workflows, not crates.io
version = "0.2.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Deterministic artifact extractor for the Factory s-1-extract stage. Emits typed factory_contracts::knowledge::ExtractionOutput. No model client allowed (spec 120 FR-007)."

[lib]
name = "artifact_extract"
path = "src/lib.rs"

[dependencies]
factory-contracts = { path = "../factory-contracts" }
serde_json = "1"
thiserror = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
quick-xml = "0.36"
pdf-extract = "0.7"

[dev-dependencies]
tempfile = "3"
toml = "0.8"

[package.metadata.oap]
spec = "120-factory-extraction-stage"
