# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Bartek Kus

[package]
name = "axiomregent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "axiomregent"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"
thiserror = "1.0"
url = "2.4"
walkdir = "2.4"
sha2 = "0.10"
hex = "0.4"
base64 = "0.21"
regex = "1.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
zstd = "0.13"
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.0", features = ["full"] }
similar = "2.7.0"
tar = "0.4.44"
log = "0.4.29"
env_logger = "0.9"
reqwest = { version = "0.12", features = ["json"] }

featuregraph = { path = "../featuregraph" }
xray        = { path = "../xray" }
agent       = { path = "../agent" }
run         = { path = "../run" }
open_agentic_policy_kernel = { path = "../policy-kernel" }

[features]
default = ["transport-stdio", "resolver-local", "skills-core"]
transport-stdio = []
resolver-local  = []
skills-core     = []
deny-exec       = []
rmcp            = []
