# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Bartek Kus

[package]
name = "elucid-engine"
version = "0.1.0"
edition = "2024"
description = "Elucid workflow engine — two-phase orchestration, manifest generation, verification (spec 075)"

[dependencies]
orchestrator = { path = "../orchestrator", default-features = false }
elucid-contracts = { path = "../elucid-contracts" }
policy-kernel = { package = "open_agentic_policy_kernel", path = "../policy-kernel" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["process", "time", "sync"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "time"] }
