# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Bartek Kus

[package]
name = "factory-engine"
version = "0.1.0"
edition = "2024"
description = "Factory workflow engine — two-phase orchestration, manifest generation, verification (spec 075)"

[dependencies]
orchestrator = { path = "../orchestrator", default-features = false }
factory-contracts = { path = "../factory-contracts" }
policy-kernel = { package = "open_agentic_policy_kernel", path = "../policy-kernel" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["process", "time", "sync"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
jsonschema = "0.28"
regex = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "factory-harness"
path = "src/bin/harness.rs"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "time"] }
