# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Bartek Kus

[package]
name = "factory-engine"
publish = false   # internal workspace crate; binaries ship via release workflows, not crates.io
version = "0.1.0"
edition = "2024"
description = "Factory workflow engine — two-phase orchestration, manifest generation, verification (spec 075)"

[dependencies]
orchestrator = { path = "../orchestrator" }
factory-contracts = { path = "../factory-contracts" }
artifact-extract = { path = "../artifact-extract" }
standards-loader = { path = "../standards-loader" }
policy-kernel = { package = "open_agentic_policy_kernel", path = "../policy-kernel" }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["process", "time", "sync", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["rt"] }
infer = "0.16"
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
jsonschema = "0.46"
regex = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"

[[bin]]
name = "factory-harness"
path = "src/bin/harness.rs"

[[bin]]
name = "factory-run"
path = "src/bin/factory_run.rs"

[[bin]]
name = "verify-certificate"
path = "src/bin/verify_certificate.rs"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "time"] }

[package.metadata.oap]
spec = "075-factory-workflow-engine"
