# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Bartek Kus

[package]
name = "factory-platform-client"
publish = false   # internal workspace crate
version = "0.1.0"
edition = "2024"
description = "Typed `/api/factory/*` client for the OPC desktop — content-addressed run-cache I/O and CatalogClient implementation (spec 124)"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
dirs = "6"

[dev-dependencies]
tempfile = "3"

[package.metadata.oap]
spec = "124-opc-factory-run-platform-integration"
