# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Bartek Kus

[package]
name = "featuregraph"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
ignore = "0.4"
regex = "1.10"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
anyhow = "1.0"
xray = { path = "../xray" }

[dev-dependencies]
tempfile = "3.10"

[package.metadata.oap]
spec = "034-featuregraph-registry-scanner-fix"
