[package]
name = "gitctx"
version = "0.1.0"
edition = "2021"
description = "MCP server for GitHub repository exploration"
license = "MIT"
autobins = false

[lib]
name = "gitctx"
path = "src/lib.rs"

[[bin]]
name = "gitctx-mcp"
path = "src/mcp_main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# GitHub API client
octocrab = "0.41"

# URL handling
url = "2"
urlencoding = "2"

# Base64 decoding for file contents
base64 = "0.22"

# Config directory paths
dirs = "5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Time handling
chrono = "0.4"

# Error handling
anyhow = "1"

# Browser opening for OAuth flow
open = "5"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Lazy static initialization
once_cell = "1"

# MCP server support
rmcp = { version = "0.12", features = ["server", "macros", "transport-io"] }
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
