[package]
name = "open_agentic_policy_kernel"
version = "0.1.0"
edition = "2024"
description = "Deterministic policy evaluation kernel with permission runtime (native + wasm32)"
rust-version = "1.85"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "verify_proof_chain"
path = "src/bin/verify_proof_chain.rs"

[features]
default = ["native"]
native = ["dep:notify"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
glob = "0.3"
hex = "0.4"
notify = { version = "7", optional = true }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
criterion = "0.5"
serde_json = "1"
tempfile = "3"

[[bench]]
name = "kernel_eval"
harness = false

[package.metadata.oap]
spec = "047-governance-control-plane"
