[package]
name = "open_agentic_policy_kernel"
publish = false   # internal workspace crate; binaries ship via release workflows, not crates.io
version = "0.1.0"
edition = "2024"
description = "Deterministic policy evaluation kernel with permission runtime (native + wasm32)"
rust-version = "1.85"

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "verify_proof_chain"
path = "src/bin/verify_proof_chain.rs"

[features]
default = ["native"]
native = ["dep:notify"]

[dependencies]
# Spec 047 FR-009.1 — Ed25519 signing for proof-chain genesis anchor.
# Companion to factory-engine's spec 102 FR-008.1 cert signing; same key
# resolution semantics for a coherent provenance story.
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
glob = "0.3"
hex = "0.4"
notify = { version = "8", optional = true }
rand = "0.8"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
criterion = "0.8"
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"

[[bench]]
name = "kernel_eval"
harness = false

[package.metadata.oap]
spec = "047-governance-control-plane"
