# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Bartek Kus

[package]
name = "skill-factory"
publish = false   # internal workspace crate; binaries ship via release workflows, not crates.io
version = "0.1.0"
edition = "2024"
description = "Skill and Command Factory — spec 071"

[dependencies]
agent-frontmatter = { path = "../agent-frontmatter" }
tool-registry = { path = "../tool-registry" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2"
glob = "0.3"
regex = "1"

[dev-dependencies]
tempfile = "3"

[package.metadata.oap]
spec = "071-skill-command-factory"
