[package]
name = "titor"
version = "0.2.0"
edition = "2021"
authors = ["Mufeed VH <mufeed@asterisk.so>"]
description = "A high-performance checkpointing library for time-travel through directory states"
license = "MIT"
readme = "README.md"
repository = "https://github.com/getAsterisk/titor"
keywords = ["checkpoint", "snapshot", "backup", "time-travel", "versioning"]
categories = ["filesystem", "data-structures"]

[features]
default = ["gxhash"]
quick-bench = []
gxhash = ["dep:gxhash"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = { version = "2.0", features = ["serde"] }

# Hashing and Compression
sha2 = "0.10"
lz4_flex = "0.11"
gxhash = { version = "3.5", optional = true }  # Fast non-cryptographic hash algorithm

# File system operations
walkdir = "2.5"
jwalk = "0.8"  # For parallel directory walking with gitignore support
tempfile = "3.20"
globset = "0.4"  # For proper glob pattern matching
ignore = "0.4"  # For proper .gitignore handling with recursive support

# Time and Date
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Parallel processing and async
rayon = "1.10"
num_cpus = "1.17"
tokio = { version = "1.46", features = ["rt", "rt-multi-thread", "macros", "time", "fs", "sync"] }

# Progress reporting
indicatif = "0.18"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "3.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Concurrency
parking_lot = "0.12"
dashmap = "6.1"

# Utilities
hex = "0.4"
humantime = "2.2"
uuid = { version = "1.17", features = ["v4", "serde"] }
hostname = "0.4"

# MCP Support (for titor_mcp_server example)
rmcp = { version = "0.2.1", features = ["server", "macros", "transport-io"], optional = true }
schemars = { version = "1.0", optional = true }

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }
proptest = "1.7"
rand = "0.9"
tracing-test = "0.2"
filetime = "0.2"

[[bin]]
name = "titor"
path = "src/bin/titor.rs"

[[example]]
name = "titor_cli"
path = "examples/titor_cli.rs"

[[example]]
name = "titor_mcp_server"
path = "examples/titor_mcp_server.rs"
required-features = ["rmcp", "schemars"]

[[bench]]
name = "titor_bench"
harness = false

[package.metadata.docs.rs]
# Build docs without gxhash to avoid CPU feature requirements
no-default-features = true
