# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Bartek Kus

[package]
name = "xray"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Deterministic repository scanner for AxiomRegent AI context"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0" # For error handling convenience
thiserror = "1.0"
walkdir = "2.4"
tempfile = "3.8"
tree-sitter = { version = "0.25", optional = true }
toml = { version = "0.8", optional = true }

[build-dependencies]
cc = { version = "1.0", optional = true }

[features]
default = []
analysis-structure = ["tree-sitter", "toml", "cc"]
analysis-call-graph = ["analysis-structure"]

[dev-dependencies]
fs_extra = "1.3.0"
