# SPDX-License-Identifier: AGPL-3.0-or-later
# Copyright (C) 2026 Bartek Kus

[package]
name = "xray"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Deterministic repository scanner for AxiomRegent AI context"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
sha2 = "0.10"
hex = "0.4"
anyhow = "1.0" # For error handling convenience
thiserror = "2"
walkdir = "2.4"
tempfile = "3.8"
tree-sitter = { version = "0.25", optional = true }
toml = { version = "0.8", optional = true }
fastembed = { version = "5", optional = true }
kd-tree = { version = "0.5", features = ["rayon"], optional = true }
parking_lot = { version = "0.12", optional = true }
once_cell = { version = "1.19", optional = true }
typenum = { version = "1.20", optional = true }
rayon = { version = "1.12", optional = true }

[build-dependencies]
cc = { version = "1.2", optional = true }

[features]
default = []
analysis-structure = ["tree-sitter", "toml", "cc"]
analysis-call-graph = ["analysis-structure"]
analysis-embeddings = ["fastembed", "kd-tree", "parking_lot", "once_cell", "typenum", "rayon"]
full = ["analysis-structure", "analysis-call-graph", "analysis-embeddings"]

[dev-dependencies]
fs_extra = "1.3.0"

[package.metadata.oap]
spec = "032-opc-inspect-governance-wiring-mvp"
